--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
     margin: 35px;
 }
 
-.box{
+.box {
     border: 3px solid #515358;
     padding: 50px;
     border-radius: 7px;
@@ -58,27 +58,43 @@
     margin-left: 20px;
 }
 
-.top{
-    display:flex;
+.top-1{
+    display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
-.price{
+.price {
     font-weight: bold;
 }
 
-.bottom{
+.bottom {
     border: 1px solid #060505;
     display: flex;
-  justify-content: space-between;
-  background-color: #e7e0e0;
+    justify-content: space-between;
+    background-color: #e7e0e0;
 }
 
-.bottom-2{
+.bottom-2 {
     border: 1px solid #060505;
-        display: flex;
-  justify-content: space-between;
-  background-color: #e7e0e0;
+    display: flex;
+    justify-content: space-between;
+    background-color: #e7e0e0;
+}
+
+.small-box{
+    height: 150px;
+    width: 200px;
+    /* margin: 50px; */
+    margin-left: 1500px;
+}
+
+.top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border:1px solid #515358;
+    
 }
 
