--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@
 
 }
 
+.cart-wrapper {
+    display: flex;
+    gap: 30px;
+    padding: 20px;
+}
+
 .mycart {
     font-size: 22px;
     font-weight: 700;
@@ -49,20 +55,46 @@
     margin: 35px;
 }
 
-.box {
-    border: 3px solid #515358;
-    padding: 50px;
-    border-radius: 7px;
-    margin-top: 15px;
-    margin-right: 500px;
-    margin-left: 20px;
+
+.left-section {
+    flex: 3;
 }
 
-.top-1{
+.small-box {
+    flex: 1;
+    border: 2px solid #020202;
+    padding: 20px;
+    height: fit-content;
+    border-radius: 7px;
+
+}
+
+.box {
+    border: 2px solid #020202;
+    padding: 20px;
+    border-radius: 7px;
+    margin-bottom: 20px;
+}
+
+.top {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+}
+
+.top-1 {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+
+}
+
+.top-2 {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+    font-weight: bold;
+
 }
 
 .price {
@@ -70,31 +102,32 @@
 }
 
 .bottom {
-    border: 1px solid #060505;
     display: flex;
     justify-content: space-between;
-    background-color: #e7e0e0;
+    background-color: #797777;
+    padding: 8px;
+    margin-top: 10px;
+    font-weight: bold;
+
 }
 
 .bottom-2 {
-    border: 1px solid #060505;
     display: flex;
     justify-content: space-between;
-    background-color: #e7e0e0;
+    background-color: #797777;
+    padding: 8px;
+    margin-top: 10px;
+    font-weight: bold;
 }
 
-.small-box{
-    height: 150px;
-    width: 200px;
-    /* margin: 50px; */
-    margin-left: 1500px;
-}
+.pay {
+    width: 100%;
+    padding: 10px;
+    background-color: #fff0f0;
+    color: rgb(18, 17, 17);
+    border: none;
+    margin-top: 15px;
+    border: 2px solid #020202;
+    font-weight: bold;
 
-.top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border:1px solid #515358;
-    
 }
-
